# CortexOps

./: Dockerfile  README.md  docker-compose.yml  implementation_plan.md  jest.config.ts  jest.setup.ts  package-lock.json  package.json  playwright.config.ts  task.md  tsconfig.json  tsconfig.workers.json
.github/workflows/: cd.yml  ci.yml
ai-engine/: Dockerfile  __init__.py  cache.py  learning_agent.py  memory_agent.py  orchestrator_agent.py  prompt_utils.py  pyproject.toml  requirements.txt  runner.py
ai-engine/app/: config.py  main.py
ai-engine/app/agents/: cortex_brain.py  executor_agent.py  planner_agent.py  reasoner_agent.py  state.py  validator_agent.py
ai-engine/app/api/: agents.py  connectors.py  metrics.py  nl_processor.py  router.py  security.py
ai-engine/app/guardrails/: engine.py
ai-engine/app/metrics/: collector.py
ai-engine/app/security/: dlp_engine.py  prompt_guard.py  static_analyzer.py
ai-engine/app/security/sandbox/: Dockerfile.sandbox
ai-engine/benchmarks/: tasks.json
ai-engine/tests/unit/: test_all.py
db/: custom.db  init.sql
e2e/: app.spec.ts
mini-services/workflow-executor/: index.ts  package.json
prisma/: schema.prisma
src/: middleware.ts  server.ts  workers.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/login/: page.tsx
src/hooks/: useWorkflowSocket.ts
src/lib/: ai-client.ts  auth-utils.ts  auth.ts  crypto.ts  db.ts  node-registry.ts  rbac.ts
src/stores/: authStore.ts  executionStore.ts  notificationStore.ts  uiStore.ts  workflowStore.ts
src/styles/: variables.css
src/types/: index.ts  workflow.ts
(+58 files in other folders)
